--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ nav {position: relative;
     top: 0;
    }
 
-.logo{
+.logo {
     float: left;
     margin-left: 40px;
        }
@@ -98,8 +98,8 @@ nav ul li a {
     }
     .logo
     {
-        padding: 20px 15px;
-    }
+        padding: 20px 15px 20px 0;
+           }
     .logo-title {
         font-size: 55px;
     }
@@ -131,9 +131,7 @@ nav ul li{
          top: 30%;
          transform: translateY(-50%);
         }
-
-
-     
+  
 
     .nav-wrapper ul li {
         display: block;
@@ -142,6 +140,7 @@ nav ul li{
         text-align: right;
         margin-bottom: 10px;
     }
+
 /*-------------------------------------------------------------------------*/
 /*--------------------------------------------------------Drop-down Sequence*/
 
@@ -206,6 +205,15 @@ nav ul li{
     .nav-btn i:nth-child(3){
         margin-top: 4px;
     }
+
+}
+
+@media screen and (max-width: 600px) {
+
+.logo{
+   
+    margin-left: 0px;
+       }
 
 }
 /*-------------------------------------------------------------------------*/
@@ -616,16 +624,189 @@ nav ul li{
 
 
 
+/*---------------------------------------------------------------Contact Form */
+.contact-pic img {
+ max-height: 580px;
+  position: relative;
+    width: 100%;
+
+}
 
 
+.cont-sctn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 65vh;
+    width: 100%;
+    background: #EFEFEF;
+    position: relative;
+    top: 5px;
+    margin-bottom: 80px;
+}
+
+.contact-container {
+    position: relative;
+    width: 100%;
+    max-width: 1100px;
+    margin: 20px;
+    height: 600px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.contact-container .form-box {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.contact-container .form-box form {
+    position: relative;
+    width: 100%;
+    padding: 0 0 0 75px;
+}
+
+.contact-container .form-box .form-style h3 {
+    color: #33353d; 
+    font-weight: 500;
+    font-size: 40px;
+    font-family: "Architects Daughter", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 40px;
+}
 
 
+.contact-container .form-box .form-style .inputbox {
+    position: relative;
+    margin-bottom: 40px;
+}
+
+.contact-container .form-box .form-style .inputbox:last-child    {
+    margin-bottom: 0px;
+}
+
+.contact-container .form-box .form-style .inputbox input,
+.contact-container .form-box .form-style .inputbox textarea {
+    position: relative;
+    background: transparent;
+    outline: none;
+    border: none;
+    width: 100%;
+    color:#000; 
+    padding-bottom: 10px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-weight: 300;
+    border-bottom: 2px solid #CAEBF2;
+    resize: none;
+}
+
+.contact-container .form-box .form-style .inputbox textarea {
+    height: 100px;    
+}
+
+.contact-container .form-box .form-style .inputbox input[type="submit"] {
+    background: #A9A9A9; ;
+    padding: 8px 20px;
+    margin-top: -10px;
+    width: 150px;
+    cursor: pointer;
+    color: #FFF; 
+    font-size: 18px;
+    font-weight: 400;
+    border: none;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+}
+
+.contact-container .form-box .form-style .inputbox input[type="submit"]:focus {
+    background: #3f3e3e;
+    color: #fff;
+    box-shadow: 0 5px #FF3B3F;
+    transform: translateY(4px);
+}
+
+.contact-container .form-box .form-style .inputbox span {
+    position: absolute;
+    left: 0;
+    font-size: 16px;
+    font-weight: 400;
+    display: inline-block;
+    pointer-events: none;
+    letter-spacing: 1px;
+    color: #A9A9A9;
+    transition: all 0.2s ;
+}
+
+.contact-container .form-box .form-style .inputbox input:focus ~ span ,
+.contact-container .form-box .form-style .inputbox textarea:focus ~ span,
+.contact-container .form-box .form-style .inputbox input:valid ~ span,
+.contact-container .form-box .form-style .inputbox textarea:valid ~ span {
+    transform: translateY(-24px);
+    color: #252525;
+    font-size: 14px;
+}
+
+.contact-container .form-box .form-style .inputbox input:focus,
+.contact-container .form-box .form-style .inputbox textarea:focus,
+.contact-container .form-box .form-style .inputbox input:valid,
+.contact-container .form-box .form-style .inputbox textarea:valid {
+
+    border-bottom-color: #252525;
+}
 
 
+@media screen and (max-width: 600px) {
+
+.contact-pic img {
+ min-height: 180px;
+ width: 95%;
+  }
+
+.contact-container .form-box form {
+    
+    padding: 0 0 0 15px;
+}
+
+.contact-container .form-box .form-style h3 {
+    color: #33353d; 
+   
+    font-size: 1.5rem;
+}
+.contact-container .form-box .form-style .inputbox span {
+    font-size: 13px;
+}
+
+}
+
+/*===================================================Template Artists.html*/
+
+.wide-pic
+{
+    max-width: 100%
+}
 
 
+.media {
+    display: flex;
+    align-content: left;
 
+}
 
+.youtube  {
+    position: relative;
+    margin: 25px;
+   align-items: left;
+}
+
+.spotify {
+    margin: 25px;
+}
 
 
 
