--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,7 +277,11 @@ nav ul li{
       border-radius: 8px;
 }
 
-
+.row-3 {
+ background-color: #d4af37;
+      padding: 15px;
+      border-radius: 8px;
+}
 
 
 .intro-pic img {
