create olivera, stina pages, modify social links on hanne, nina pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,7 +443,7 @@ nav ul li{
 .pic1 {
     height: 100%;
     width: 100%;
-    background-image: url("../img/ninakinert1.png");
+    background-image: url("../img/agnes_obel1a.png");
     background-repeat: no-repeat;
     position: absolute;
     bottom:0;
